--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,6 @@
   "DND5E.SPELLCASTING.SLOTS.spell13": "13th Level",
   "DND5E.SPELLCASTING.SLOTS.spell14": "14th Level",
   "DND5E.SPELLCASTING.SLOTS.spell15": "15th Level",
-  "NETHERSCROLLS.SayHello": "Say hello",
+  "NETHERSCROLLS.SayHello": "HELO",
   "NETHERSCROLLS.HelloMessage": "helo from {name}"
 }
